# odjitter

./: CHANGELOG.md  Cargo.toml  README.md  README.qmd
.github/workflows/: test.yml
data/: output_destinations_differ_50.geojson  output_max10.geojson  output_max50.geojson
r/: DESCRIPTION  README.Rmd  README.md
r/R/: jitter.R
r/man/: jitter.Rd
src/: lib.rs  main.rs  scrape.rs
