[package]
name = "odjitter"
version = "0.2.0"
edition = "2021"
authors = ["Robin Lovelace <robinlovelace>"]
description = "Disaggregate origin/destination data from zones to points"
repository = "https://github.com/itsleeds/odjitter"
license = "Apache-2.0"
readme = "README.md"
keywords = ["transportation", "gis", "geospatial", "routing", "origin-destination"]
categories = ["science", "simulation", "command-line-utilities"]
homepage = "https://github.com/itsleeds/odjitter"
documentation = "https://docs.rs/odjitter"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
flatgeobuf = { version = "5.0", default-features = false }
fs-err = "3.0"
geo = "0.28"
geo-types = "0.7"
geojson = { version = "0.24", features = ["geo-types"] }
geozero = { version = "0.14", default-features = false, features = ["with-geojson"] }
ordered-float = "4.0"
rand = "0.8"
rstar = "0.12"
serde_json = "1.0"
